# gl

./: CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
lib/glfw-3.3.2/src/: CMakeLists.txt
src/: main.cpp
src/device/: display.cpp  display.h
src/render/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
src/util/: FileUtil.cpp  FileUtil.h
